[package]
name = "packwiz_parent_pack"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "packwiz-parent-pack"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.4"
clap = { version = "4.3.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"

tokio = { version = "1.28.2", features = ["full"] }
futures = { version = "0.3", default-features = false }

furse = "1.5.9"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
digest = "0.10"